--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.32.3",
     "cross-env": "^7.0.3",
     "jest": "^27.4.5"
   },
